// 使用该proto文件可以定义交互的服务接口，基于该文件编译成的源文件可以分别复制到 client端和server端，便于两者使用

syntax = "proto3"; // 定义语法类型

import "google/protobuf/any.proto";

package grpc.auto; // 定义作用域
option java_multiple_files = true; // 表示下面的message不需要编译成多个java文件
option java_package = "grpc.auto"; //指定该proto文件编译成的java源文件的包名

service Hello {// 定义服务
  rpc sayHello(HelloRequest) returns(HelloResponse) {}
  rpc sayHelloClientStream(stream HelloRequest) returns(HelloResponse) {}
  rpc sayHelloServerStream(HelloRequest) returns(stream HelloResponse) {}
  rpc sayHelloDoubleStream(stream HelloRequest) returns(stream HelloResponse) {}

  rpc call(Payload) returns(Payload){}
}

message Payload{
  string type = 1;
  google.protobuf.Any body = 2;
}

message HelloRequest {// 定义请求的消息体
  string name = 1;
}

message HelloResponse {// 定义回复的消息体
  string message = 1;
}